--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@cxj-npm/rollup-plugin-alias",
   "version": "1.0.2",
-  "description": "",
+  "description": "Define and resolve aliases for bundle dependencies",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
@@ -11,10 +11,12 @@
   "keywords": [
     "rollup",
     "vite",
-    "alias"
+    "alias",
+    "plugin",
+    "resolve"
   ],
   "author": "cxj",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.3.4",
     "rollup": "^2.77.3",
@@ -23,5 +25,9 @@
   },
   "files": [
     "dist/**/*"
-  ]
+  ],
+  "repository": {
+    "url": "cscxj/rollup-plugin-alias"
+  },
+  "homepage": "https://github.com/cscxj/rollup-plugin-alias#readme"
 }
